# tesi-magistrale

./: .gitignore  README.md  results_after_compression_techniques.xlsx
baseline_flower/quickstart-pytorch/: final_model.pt  pyproject.toml
baseline_flower/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
baseline_flower_distillation/quickstart-pytorch/: final_model.pt  pyproject.toml
baseline_flower_distillation/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
baseline_flower_distillation/quickstart-pytorch/pytorchexample/compression/: distiller.py  strategy.py
baseline_flower_ordered_dropout/quickstart-pytorch/: pyproject.toml
baseline_flower_ordered_dropout/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
baseline_flower_quantization/quickstart-pytorch/: pyproject.toml
baseline_flower_quantization/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
plot_scripts/: box_plot_comparison_among_techniques.py  line_plot_comparison_among_techniques.py  line_plot_per_technique.py
simulation_results/: baseline_metrics.ods  baseline_metrics_after_compression.ods
simulation_results/FASHION_MNIST/iid/baseline/: server_aggregate.csv
simulation_results/FASHION_MNIST/iid/distillation/: server_aggregate.csv
simulation_results/FASHION_MNIST/iid/ordered_dropout/: server_aggregate.csv
simulation_results/FASHION_MNIST/iid/quantization/: server_aggregate.csv
simulation_results/baseline/: baseline_iid_10_clients.csv  baseline_non_iid.csv
(+234 files in other folders)
