[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.0.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 15
fraction-evaluate = 0.5 # la metà dei client testa il modello
local-epochs = 1  # numero di volte che un client addestra il proprio modello locale sull'intero set di dati locale durante un singolo round 
learning-rate = 0.01
batch-size = 32
seed = 42

# il numero dei client va cambiato nel file di configurazione dove Flower è installato